Change Login and Register UI

--- a/Web/Bookworm.Web/Views/Book/Random.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Random.cshtml
@@ -4,7 +4,7 @@
     this.ViewData["Title"] = "Random Book Generator";
 }
 <div class="d-flex justify-content-center mt-5">
-    <div class="card text-center title-card">
+    <div class="card text-center title-card animate__animated animate__jackInTheBox">
         <div class="card-body">
             <h3>@this.ViewData["Title"]<i class="fas fa-cog icon ms-3"></i></h3>
         </div>
