--- a/Web/Bookworm.Web/Views/Quote/Add.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Add.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="d-flex justify-content-center mt-5">
-    <div class="card text-center title-card">
+    <div class="card text-center title-card animate__animated animate__jackInTheBox">
         <div class="card-body">
             <h3>@this.ViewData["Title"]<i class="fas fa-pen icon ms-3"></i></h3>
         </div>
@@ -17,7 +17,7 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group fs-4">
         <label asp-for="Content">Content*</label>
-        <textarea asp-for="Content" class="form-control border border-2 fs-5" rows="12"></textarea>
+        <textarea asp-for="Content" class="form-control border border-2 fs-5" rows="6"></textarea>
         <span asp-validation-for="Content" class="small text-danger"></span>
     </div>
     <div class="form-group mt-4 fs-4">
