--- a/Web/Bookworm.Web/Views/Quote/All.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/All.cshtml
@@ -5,8 +5,8 @@
     int index = 1;
 }
 
-<div class="col d-flex justify-content-center mt-5 mb-4">
-    <div class="card title-card">
+<div class="col d-flex justify-content-center my-4">
+    <div class="card title-card animate__animated animate__jackInTheBox">
         <div class="card-body">
             <h3>@this.ViewData["Title"] (@Model.Count())</h3>
         </div>
@@ -14,7 +14,7 @@
 </div>
 
 
-<table id="quotesTable" class="table table-bordered animate__animated animate__zoomIn table-responsive">
+<table id="quotesTable" class="table table-bordered table-responsive">
     <thead>
         <tr>
             <th scope="col">#</th>
