--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -9,11 +9,11 @@
     <link href="~/lib/fontawesome/css/all.css" rel="stylesheet" />
     <link href="~/lib/toastr/toastr.min.css" rel="stylesheet" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/animate.css/animate.min.css" />
-    <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fs-5 fixed-top">
+        <nav class="navbar navbar-expand-lg fs-5">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
@@ -49,7 +49,7 @@
     </div>
 
 
-    <footer class="bookworm-footer py-4 text-center text-white d-flex align-items-center justify-content-center">
+    <footer class="bookworm-footer py-4 text-center text-white d-flex align-items-center justify-content-center fs-5">
             <span>
                 &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a class="privacy-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </span>
