--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,14 +5,14 @@
 }
 
 
-<div class="card login-form border-3 border-black">
-    <div class="row g-0">
-        <div class="col-md-4">
-            <img src="@Model.RegisterPictureUrl" class="img-fluid rounded-start img-login" alt="Books Image...">
+<div class="card loginRegisterFormContainer border-1 border-black">
+    <div class="d-flex justify-content-center">
+        <div class="col-md-5 imageContainer">
+            <img src="@Model.RegisterPictureUrl" class="img-fluid rounded-start img-login h-100" alt="Books Image...">
         </div>
-        <div class="col-md-8">
+        <div class="col-md-7 loginRegisterForm">
             <div class="card-body">
-                <h5 class="card-title text-center fs-1">Create an Account</h5>
+                <h5 class="card-title text-center fs-3">Create an Account</h5>
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
@@ -20,27 +20,27 @@
                 </div>
                 <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group">
+                    <div class="form-floating">
+                        <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username" />
                         <label asp-for="Input.UserName"></label>
-                        <input asp-for="Input.UserName" class="form-control" />
                         <span asp-validation-for="Input.UserName" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
+                    <div class="form-floating">
+                        <input asp-for="Input.Email" class="form-control my-3 border border-2" placeholder="name@example.com" />
                         <label asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control" />
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
+                    <div class="form-floating">
+                        <input asp-for="Input.Password" class="form-control mb-3 border border-2" placeholder="password" />
                         <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" class="form-control" />
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
+                    <div class="form-floating">
+                        <input asp-for="Input.ConfirmPassword" class="form-control border border-2" placeholder="confirm password" />
                         <label asp-for="Input.ConfirmPassword"></label>
-                        <input asp-for="Input.ConfirmPassword" class="form-control" />
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                     </div>
-                    <div class="form-group text-center">
+                    <div class="form-group text-center my-4">
                         <button type="submit" class="btn button">Register</button>
                     </div>
                 </form>
@@ -54,66 +54,6 @@
         </div>
     </div>
 </div>
-
-
-@*<div class="card o-hidden border-0 shadow-lg">
-    <div class="card-body p-0">
-        <!-- Nested Row within Card Body -->
-        <div class="row">
-            <div class="col-lg-5 d-block d-lg-block">
-                <div>
-                    <img src="@Model.LoginPictureUrl" class="img-fluid" style="height:55rem">
-                </div>
-
-            </div>
-            <div class="col-lg-7">
-                <div class="p-5">
-                    <div class="text-center">
-                        <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
-                    </div>
-                    <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="Input.UserName"></label>
-                            <input asp-for="Input.UserName" class="form-control" />
-                            <span asp-validation-for="Input.UserName" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Input.ProfilePictureFile" class="form-label"></label>
-                            <input asp-for="Input.ProfilePictureFile" class="form-control" type="file">
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Input.Email"></label>
-                            <input asp-for="Input.Email" class="form-control" />
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Input.Password"></label>
-                            <input asp-for="Input.Password" class="form-control" />
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Input.ConfirmPassword"></label>
-                            <input asp-for="Input.ConfirmPassword" class="form-control" />
-                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                        </div>
-                        <hr>
-                        <div class="form-group text-center">
-                            <button type="submit" class="btn button">Register</button>
-                        </div>
-                    </form>
-                    <hr>
-                    <div class="text-center">
-                        <a class="small" href="forgot-password.html">Forgot Password?</a>
-                    </div>
-                    <div class="text-center">
-                        <a class="small" href="login.html">Already have an account? Login!</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
