--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -4,14 +4,13 @@
     this.ViewData["Title"] = "Books";
 }
 
-<div class="col d-flex justify-content-center">
-    <div id="textCard" class="card col-8 text-center">
+<div class="d-flex justify-content-center mt-5">
+    <div class="card text-center title-card animate__animated animate__jackInTheBox">
         <div class="card-body">
-            <h1 class="display-4">@Model.CategoryName (@Model.BookCount)</h1>
+            <h2>@Model.CategoryName (@Model.BookCount)</h2>
         </div>
     </div>
 </div>
-<hr />
 
 <div>
     <div class="row">
