Change dropdown and quotes UI

--- a/Web/Bookworm.Web/Views/Quote/All.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/All.cshtml
@@ -5,7 +5,7 @@
     var quotes = this.Model.Quotes.ToList();
 }
 
-<div class="col d-flex justify-content-center my-4">
+<div class="d-flex justify-content-center my-4">
     <div class="card title-card animate__animated animate__jackInTheBox">
         <div class="card-body">
             <h3>@this.ViewData["Title"] (@Model.QuotesCount)</h3>
@@ -23,22 +23,23 @@
             </div>
             <div class="card-body">
                 <blockquote class="blockquote">
-                    <p class="text-center quoteContent">@quotes[i].Content</p>
+                   <p class="quoteContent">@quotes[i].Content</p>
+                    
                     @if (quotes[i].AuthorName != null)
                     {
-                        <footer class="blockquote-footer text-end">
+                        <footer class="blockquote-footer">
                             @quotes[i].AuthorName
                         </footer>
                     }
                     @if (quotes[i].BookTitle != null)
                     {
-                        <footer class="blockquote-footer text-end">
+                        <footer class="blockquote-footer">
                             From the book: @quotes[i].BookTitle
                         </footer>
                     }
                     @if (quotes[i].MovieTitle != null)
                     {
-                        <footer class="blockquote-footer text-end">
+                        <footer class="blockquote-footer">
                             From the movie: @quotes[i].MovieTitle
                         </footer>
                     }
@@ -52,23 +53,24 @@
                     Quote
                 </div>
                 <div class="card-body">
-                    <blockquote class="blockquote">
-                        <p class="text-center quoteContent">@quotes[i + 1].Content</p>
+                    <blockquote  class="blockquote">
+                        <p class="quoteContent">@quotes[i + 1].Content</p>
+                        
                         @if (quotes[i + 1].AuthorName != null)
                         {
-                            <footer class="blockquote-footer text-end">
+                            <footer class="blockquote-footer">
                                 @quotes[i + 1].AuthorName
                             </footer>
                         }
                         @if (quotes[i + 1].BookTitle != null)
                         {
-                            <footer class="blockquote-footer text-end">
+                            <footer class="blockquote-footer">
                                 From the book: @quotes[i + 1].BookTitle
                             </footer>
                         }
                         @if (quotes[i + 1].MovieTitle != null)
                         {
-                            <footer class="blockquote-footer text-end">
+                            <footer class="blockquote-footer">
                                 From the movie: @quotes[i + 1].MovieTitle
                             </footer>
                         }
@@ -82,15 +84,15 @@
 @if (Model.QuotesCount > 0)
 {
     <nav aria-label="...">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination pagination-lg justify-content-center">
             <li class="page-item @if (Model.HasPreviousPage == false){<text>disabled</text>}">
-                <a id="previous" class="page-link" asp-action="All" asp-route-page="@Model.PreviousPageNumber">Previous</a>
+                <a class="page-link" asp-action="All" asp-route-page="@Model.PreviousPageNumber"><i class="fa-solid fa-arrow-left"></i></a>
             </li>
             @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
             {
                 if (i > 0)
                 {
-                    <li class="page-item"><a class="page-link" asp-action="All" asp-route-page="@i">@i</a></li>
+                    <li class="page-item"><a class="page-link page-link-custom" asp-action="All" asp-route-page="@i">@i</a></li>
                 }
             }
             <li class="page-item active">
@@ -103,11 +105,11 @@
             {
                 if (i <= Model.PagesCount)
                 {
-                    <li class="page-item"><a class="page-link" asp-action="All" asp-route-page="@i">@i</a></li>
+                    <li class="page-item"><a class="page-link page-link-custom" asp-action="All" asp-route-page="@i">@i</a></li>
                 }
             }
             <li class="page-item @if (Model.HasNextPage == false){<text>disabled</text>}">
-                <a class="page-link" asp-action="All" asp-route-page="@Model.NextPageNumber">Next</a>
+                <a class="page-link" asp-action="All" asp-route-page="@Model.NextPageNumber"><i class="fa-solid fa-arrow-right"></i></a>
              </li>
         </ul>
     </nav>
