--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "My Books";
 }
 
-<div class="col d-flex justify-content-center">
-    <div id="textCard" class="card col-5 text-center">
+<div class="d-flex justify-content-center mt-5">
+    <div class="card text-center title-card animate__animated animate__jackInTheBox">
         <div class="card-body">
-            <h1 class="display-4">@ViewData["Title"] (@Model.BookCount)</h1>
+            <h2>@ViewData["Title"] (@Model.BookCount)</h2>
         </div>
     </div>
 </div>
