--- a/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
+++ b/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
@@ -4,8 +4,12 @@
     this.ViewData["Title"] = "Favorite Books";
 }
 
-<div class="text-center textContainer col-5">
-    <h1 class="display-4">@this.ViewData["Title"]</h1>
+<div class="d-flex justify-content-center mt-5">
+    <div class="card text-center title-card animate__animated animate__jackInTheBox">
+        <div class="card-body">
+            <h3>@this.ViewData["Title"]</h3>
+        </div>
+    </div>
 </div>
 
 
