--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -4,6 +4,7 @@
     --clr-primary: #34495E;
     --clr-secondary: #1abc9c;
     --clr-white: #fff;
+    --clr-black: #000000;
     --clr-custom-divider: #2c3e50;
 }
 
@@ -30,6 +31,23 @@ body {
             color: var(--clr-secondary);
         }
 
+    .navbar .navbar-toggler {
+        border-color: var(--clr-white);
+    }
+
+    .navbar .dropdown .dropdown-menu {
+        background-color: var(--clr-primary);
+    }
+
+        .navbar .dropdown .dropdown-menu .dropdown-item {
+            color: var(--clr-white);
+        }
+
+            .navbar .dropdown .dropdown-menu .dropdown-item:hover {
+                background-color: var(--clr-secondary);
+                color: var(--clr-black);
+            }
+
 .fa-bars {
     color: var(--clr-white);
 }
@@ -47,7 +65,7 @@ body {
 .logout-btn {
     background-color: var(--clr-secondary);
     color: var(--clr-white);
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .loginRegisterFormContainer {
@@ -70,6 +88,35 @@ a {
 
 .category-link {
     text-decoration: none;
+}
+
+
+
+/*Pagination Styles*/
+.pagination > li > a {
+    background-color: var(--clr-primary);
+    color: var(--clr-white);
+}
+
+    .pagination > li > a:focus,
+    .pagination > li > a:hover,
+    .pagination > li > span:focus,
+    .pagination > li > span:hover {
+        color: var(--clr-black);
+        background-color: var(--clr-secondary);
+    }
+
+.pagination > .active > span,
+.pagination > .active > span:focus {
+    background-color: var(--clr-secondary);
+    border: solid 2px var(--clr-black);
+}
+
+
+/*Table Styles*/
+.table tr td, .table thead tr th, .table tbody th {
+    background-color: var(--clr-primary);
+    color: var(--clr-white);
 }
 
 /*Custom divider style*/
@@ -137,8 +184,8 @@ a[class="privacy-link"] {
     color: var(--clr-white);
 }
 
-    .title-card :hover {
-        color: var(--clr-secondary);
+    .title-card .blockquote .blockquote-footer {
+        color: var(--clr-white);
     }
 
 .card .card-header {
@@ -211,7 +258,7 @@ input[type="radio"] {
         flex-direction: column;
     }
 
-    .quotesContainer .quoteCard {
-        width: 100%;
-    }
+        .quotesContainer .quoteCard {
+            width: 100%;
+        }
 }
